update update s3style add validator for objects
